--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "paper-table",
-  "version": "0.0.7",
+  "version": "0.0.8",
   "authors": [
     "UnwrittenFun <unwrittenfun@gmail.com>"
   ],
@@ -21,7 +21,10 @@
     "iron-icon": "PolymerElements/iron-icon#~1.0.7",
     "paper-dialog": "PolymerElements/paper-dialog#^1.0.0",
     "paper-dialog-behavior": "PolymerElements/paper-dialog-behavior#^1.1.0",
-    "paper-input": "PolymerElements/paper-input#~1.1.3"
+    "paper-input": "PolymerElements/paper-input#~1.1.3",
+    "paper-dropdown-menu": "PolymerElements/paper-dropdown-menu#~1.1.1",
+    "paper-menu": "PolymerElements/paper-menu#~1.2.1",
+    "paper-item": "PolymerElements/paper-item#~1.1.2"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
